[gd_scene load_steps=25 format=3 uid="uid://bfcnb2yir40br"]

[ext_resource type="Script" path="res://Entities/entities_scripts/enemy_1.gd" id="1_sm0wu"]
[ext_resource type="Texture2D" uid="uid://jhnrsdmhw6n5" path="res://Sprites/orc1_run_full.png" id="2_dqu1u"]
[ext_resource type="AudioStream" uid="uid://ch1gxwwlpqohp" path="res://SoundEffects/Hit_bullet_damage.ogg" id="3_khll3"]
[ext_resource type="Texture2D" uid="uid://djy3oqt1sw414" path="res://Sprites/orc1_death_full.png" id="3_psgng"]
[ext_resource type="Texture2D" uid="uid://da7pd82lmu4o3" path="res://Sprites/orc1_attack_full.png" id="4_1cm7m"]
[ext_resource type="AudioStream" uid="uid://de5u1e46i3340" path="res://SoundEffects/goblin_die_01.ogg" id="4_vj180"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rfigo"]

[sub_resource type="Animation" id="Animation_s1xue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/normal_movement_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nx7c6"]
resource_name = "move_down"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/normal_movement_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_tk37g"]
resource_name = "move_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/normal_movement_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_vbwjg"]
resource_name = "move_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/normal_movement_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_20cgi"]
resource_name = "move_up"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/normal_movement_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8r0fx"]
_data = {
"RESET": SubResource("Animation_s1xue"),
"move_down": SubResource("Animation_nx7c6"),
"move_left": SubResource("Animation_tk37g"),
"move_right": SubResource("Animation_vbwjg"),
"move_up": SubResource("Animation_20cgi")
}

[sub_resource type="Animation" id="Animation_r7e7e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/die_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xvjqb"]
resource_name = "dead"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/die_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oyqbu"]
_data = {
"RESET": SubResource("Animation_r7e7e"),
"dead": SubResource("Animation_xvjqb")
}

[sub_resource type="Animation" id="Animation_yj0dx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/attack_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_cl8vh"]
resource_name = "attack_down"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/attack_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_utytk"]
resource_name = "attack_left"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/attack_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_0yodf"]
resource_name = "attack_right"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/attack_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_hoogn"]
resource_name = "attack_up"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/attack_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipdao"]
_data = {
"RESET": SubResource("Animation_yj0dx"),
"attack_down": SubResource("Animation_cl8vh"),
"attack_left": SubResource("Animation_utytk"),
"attack_right": SubResource("Animation_0yodf"),
"attack_up": SubResource("Animation_hoogn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5xl2"]
size = Vector2(23.8462, 29.2308)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3ijx"]
size = Vector2(168.047, 120.71)

[node name="enemy_2" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.65, 0.65)
collision_layer = 32
collision_mask = 152
script = ExtResource("1_sm0wu")

[node name="Sprites" type="Node2D" parent="."]

[node name="normal_movement_enemy" type="Sprite2D" parent="Sprites"]
y_sort_enabled = true
texture = ExtResource("2_dqu1u")
hframes = 8
vframes = 4
frame = 1

[node name="die_sprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("3_psgng")
hframes = 8
vframes = 4

[node name="attack_sprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("4_1cm7m")
hframes = 8
vframes = 4
frame = 24

[node name="enemy_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.7692)
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_rfigo")

[node name="Animations" type="Node2D" parent="."]

[node name="move_animation_enemy" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8r0fx")
}

[node name="die_animation_enemy" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_oyqbu")
}

[node name="attack_animation_enemy" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ipdao")
}

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 32
collision_mask = 3

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2.38419e-07, -3.84615)
shape = SubResource("RectangleShape2D_n5xl2")
debug_color = Color(0.938574, 0.115461, 0.547082, 0.42)

[node name="chase_box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_box"]
position = Vector2(0, -1.13687e-13)
scale = Vector2(1.4, 1.4)
shape = SubResource("RectangleShape2D_k3ijx")
debug_color = Color(0.723951, 0.477191, 0.00940225, 0.42)

[node name="timer_direction" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="hit_damage_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_khll3")
volume_db = 6.0
panning_strength = 0.0

[node name="die_enemy_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vj180")
volume_db = 8.0
panning_strength = 0.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="chase_box" to="." method="_on_chase_box_area_entered"]
[connection signal="timeout" from="timer_direction" to="." method="_on_timer_timeout"]
